[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/AsteroidManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Sun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlanetSystem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Game_Scene.gd" type="Script" id=5]
[ext_resource path="res://Assets/Game_Assets/Space_background.png" type="Texture" id=6]
[ext_resource path="res://Assets/ParticleAssets/PNG (Transparent)/star_07.png" type="Texture" id=7]


[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.172185, 0.470199, 0.860927 )
colors = PoolColorArray( 0.444444, 0.444444, 0.444444, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[node name="Game_Scene" type="Node"]
script = ExtResource( 5 )

[node name="UI" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="BG" type="Sprite" parent="Camera2D"]
position = Vector2( 1.33484, -1.33484 )
texture = ExtResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Camera2D"]
material = SubResource( 1 )
amount = 20
lifetime = 2.0
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 1024, 576 )
gravity = Vector2( 0, 0 )
scale_amount = 0.01
scale_amount_random = 0.05
color_ramp = SubResource( 2 )

[node name="AsteroidManager" parent="." instance=ExtResource( 2 )]

[node name="Sun" parent="." instance=ExtResource( 3 )]

[node name="PlanetSystem" parent="." instance=ExtResource( 4 )]
Speed = 1.513

[node name="PlanetSystem2" parent="." instance=ExtResource( 4 )]
Speed = 1.513
Radius = 150

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true
[connection signal="asteroid_hit" from="Sun" to="." method="_on_Sun_asteroid_hit"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
